<resources>
    <string name="app_name">ExamenUF1</string>
    <string name="entrar">Entrar</string>
    <string name="pon_admin">Pon admin (en minusculas)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adds_a_student">adds a student</string>
    <string name="nombre">Nombre</string>
    <string name="edad">Edad</string>
    <string name="direccion_postal">Direccion postal</string>
    <string name="informe_academico">Informe academico</string>
    <string name="lista">Lista</string>
    <string name="todo">TODO</string>
</resources>