<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFragment">

    <!-- TODO: Update blank fragment layout -->


    <EditText
        android:id="@+id/editTextAlumName"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="135dp"
        android:layout_height="125dp"
        android:layout_gravity="right"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:alpha="100"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:srcCompat="@drawable/perfil"
        tools:src="@drawable/perfil"
        tools:srcCompat="@drawable/perfil"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/editTextEdad"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="140dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edad"
        android:inputType="number"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="220dp"
        android:layout_marginRight="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/direccion_postal"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextInforme"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="300dp"
        android:layout_marginRight="40dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/informe_academico"
        android:inputType="textMultiLine" />

    <ImageButton
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="540dp"
        android:contentDescription="@string/adds_a_student"
        android:src="@android:drawable/ic_input_add" />

    <Button
        android:id="@+id/buttonLista"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="bottom|center"
        android:text="@string/lista" />

</FrameLayout>